--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
@@ -19,6 +20,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
